//
//  Created by Vonage on 18/5/26.
//

enum GoodByeAccessibilityID {
    static let screen = "goodbye-screen"
    static let reenterButton = "goodbye-reenter-button"
    static let landingPageButton = "goodbye-landing-page-button"
}

