...
}

#Preview {
    ParticipantsListView(
        participants: PreviewData.uiManyParticipants,
        participantsCount: PreviewData.uiManyParticipants.count,
        roomName: "heart-of-gold",
        meetingURL: .init(string: "https://video.vonage.com/room/heart-of-gold")
    ) {}
}

